--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-CREDENTIALS_PATH="./google.json"
-SCOPES=["https://www.googleapis.com/auth/spreadsheets"]
-SPREADSHEET_ID="1L-ZQKG1Y3541s1xD9-Y_S_25Ta191oSbrw8uJHnq2oQ"
+CREDENTIALS_PATH=./google.json
+SCOPES=https://www.googleapis.com/auth/spreadsheets
+SPREADSHEET_ID=1ZwwBDyHc6bJunW9V_Uia3BzTrn5ahd8bkEjwc9xIUT0
