--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.2",
+    "fs": "^0.0.1-security",
     "googleapis": "^105.0.0",
     "node-fetch": "^3.3.2",
     "path": "^0.12.7",
